[gd_scene load_steps=21 format=2]

[ext_resource path="res://ui/resources/Coiny-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/lobby/lobby.gd" type="Script" id=2]
[ext_resource path="res://ui/lobby/player_slot.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 8
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="DynamicFont" id=8]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 8
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 10
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="DynamicFont" id=15]
size = 24
extra_spacing_top = 2
extra_spacing_bottom = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=16]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=17]
size = 20
extra_spacing_top = 2
extra_spacing_bottom = 7
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.117647, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CodeSection" type="ColorRect" parent="."]
anchor_right = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 62.0
color = Color( 0.227451, 0.227451, 0.227451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CodeSection"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CodeSection/HBoxContainer"]
margin_top = 14.0
margin_right = 150.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "Invite code: "

[node name="CodeEditContainer" type="CenterContainer" parent="CodeSection/HBoxContainer" groups=[
"disconnected_ui",
]]
margin_left = 154.0
margin_right = 354.0
margin_bottom = 52.0

[node name="TextEdit" type="TextEdit" parent="CodeSection/HBoxContainer/CodeEditContainer"]
margin_top = 11.0
margin_right = 200.0
margin_bottom = 41.0
rect_min_size = Vector2( 200, 30 )
custom_fonts/font = SubResource( 2 )
text = "10.0.0.231"
context_menu_enabled = false

[node name="JoinContainer" type="CenterContainer" parent="CodeSection/HBoxContainer" groups=[
"disconnected_ui",
]]
margin_left = 358.0
margin_right = 410.0
margin_bottom = 52.0

[node name="Button" type="Button" parent="CodeSection/HBoxContainer/JoinContainer"]
margin_top = 15.0
margin_right = 52.0
margin_bottom = 37.0
size_flags_vertical = 0
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Join"

[node name="Code" type="Label" parent="CodeSection/HBoxContainer" groups=[
"multiplayer_ui",
]]
visible = false
margin_left = 414.0
margin_top = 14.0
margin_right = 531.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 9 )
text = "SpecialCode"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 72.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameContainer" type="MarginContainer" parent="HBoxContainer"]
margin_right = 510.0
margin_bottom = 504.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/GameContainer"]
margin_left = 10.0
margin_right = 500.0
margin_bottom = 504.0
custom_constants/separation = 10

[node name="PlayerContainer" type="GridContainer" parent="HBoxContainer/GameContainer/VBoxContainer"]
margin_right = 490.0
margin_bottom = 304.0
columns = 2

[node name="PlayerSlot1" parent="HBoxContainer/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 3 )]
margin_right = 243.0
margin_bottom = 150.0

[node name="PlayerSlot2" parent="HBoxContainer/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 3 )]
margin_left = 247.0
margin_right = 490.0
margin_bottom = 150.0

[node name="PlayerSlot3" parent="HBoxContainer/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 3 )]
margin_top = 154.0
margin_right = 243.0
margin_bottom = 304.0

[node name="PlayerSlot4" parent="HBoxContainer/GameContainer/VBoxContainer/PlayerContainer" instance=ExtResource( 3 )]
margin_left = 247.0
margin_top = 154.0
margin_right = 490.0
margin_bottom = 304.0

[node name="OpenMultiplayerButton" type="Button" parent="HBoxContainer/GameContainer/VBoxContainer" groups=[
"host_ui",
]]
margin_top = 314.0
margin_right = 242.0
margin_bottom = 340.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Open to multiplayer"
align = 0

[node name="CloseMultiplayerButton" type="Button" parent="HBoxContainer/GameContainer/VBoxContainer" groups=[
"host_ui",
]]
visible = false
margin_top = 350.0
margin_right = 214.0
margin_bottom = 376.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Close multiplayer"
align = 0

[node name="LeaveLobbyButton" type="Button" parent="HBoxContainer/GameContainer/VBoxContainer" groups=[
"client_ui",
]]
visible = false
margin_top = 350.0
margin_right = 214.0
margin_bottom = 376.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Leave lobby"
align = 0

[node name="EnableTeamsButton" type="Button" parent="HBoxContainer/GameContainer/VBoxContainer" groups=[
"host_ui",
]]
margin_top = 350.0
margin_right = 165.0
margin_bottom = 376.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Enable teams"
align = 0

[node name="StartButton" type="Button" parent="HBoxContainer/GameContainer/VBoxContainer" groups=[
"host_ui",
]]
margin_top = 386.0
margin_right = 68.0
margin_bottom = 412.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Start"
align = 0

[node name="BackButton" type="Button" parent="HBoxContainer/GameContainer/VBoxContainer"]
margin_top = 422.0
margin_right = 255.0
margin_bottom = 448.0
size_flags_horizontal = 0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/disabled = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color = Color( 0.627451, 0.627451, 0.627451, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 0.470588, 0.470588, 0.470588, 1 )
text = "Return to main menu"
align = 0

[node name="TutorialContainer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 504.0
size_flags_horizontal = 3
custom_constants/margin_right = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Rect" type="ColorRect" parent="HBoxContainer/TutorialContainer"]
margin_left = 10.0
margin_right = 500.0
margin_bottom = 494.0
rect_min_size = Vector2( 100, 100 )
color = Color( 0.227451, 0.227451, 0.227451, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TutorialContainer/Rect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HBoxContainer/TutorialContainer/Rect/VBoxContainer"]
margin_right = 470.0
margin_bottom = 22.0
rect_min_size = Vector2( 0, 22 )
size_flags_vertical = 1
custom_fonts/font = SubResource( 16 )
text = "How to play the game"
align = 1

[node name="Video" type="ColorRect" parent="HBoxContainer/TutorialContainer/Rect/VBoxContainer"]
margin_top = 32.0
margin_right = 470.0
margin_bottom = 332.0
rect_min_size = Vector2( 0, 300 )
color = Color( 0.054902, 0.054902, 0.054902, 1 )

[node name="Description" type="Label" parent="HBoxContainer/TutorialContainer/Rect/VBoxContainer"]
margin_top = 342.0
margin_right = 470.0
margin_bottom = 474.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 17 )
text = "Press A to charge joust
Press B to dodge
Press X to parry"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CodeSection/HBoxContainer/JoinContainer/Button" to="." method="_connect_to_server"]
[connection signal="pressed" from="HBoxContainer/GameContainer/VBoxContainer/OpenMultiplayerButton" to="." method="_create_server"]
[connection signal="pressed" from="HBoxContainer/GameContainer/VBoxContainer/CloseMultiplayerButton" to="." method="_close_server"]
[connection signal="pressed" from="HBoxContainer/GameContainer/VBoxContainer/LeaveLobbyButton" to="." method="_disconnect"]
[connection signal="pressed" from="HBoxContainer/GameContainer/VBoxContainer/BackButton" to="." method="_exit"]
